# agentos

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  config.yaml  package-lock.json  package.json
.github/workflows/: ci.yml
agents/ai-engineer/: agent.toml
agents/analyst/: agent.toml
agents/app-store-optimizer/: agent.toml
agents/architect/: agent.toml
agents/assistant/: agent.toml
agents/brand-guardian/: agent.toml
agents/code-reviewer/: agent.toml
agents/coder/: agent.toml
agents/content-creator/: agent.toml
agents/customer-support/: agent.toml
agents/data-scientist/: agent.toml
agents/debugger/: agent.toml
agents/devops-lead/: agent.toml
agents/doc-writer/: agent.toml
agents/email-assistant/: agent.toml
agents/evidence-collector/: agent.toml
agents/feedback-synthesizer/: agent.toml
agents/growth-hacker/: agent.toml
agents/health-tracker/: agent.toml
agents/hello-world/: agent.toml
agents/home-automation/: agent.toml
agents/image-prompt-engineer/: agent.toml
agents/legal-assistant/: agent.toml
agents/meeting-assistant/: agent.toml
agents/mobile-builder/: agent.toml
agents/ops/: agent.toml
agents/orchestrator/: agent.toml
agents/performance-benchmarker/: agent.toml
agents/personal-finance/: agent.toml
agents/planner/: agent.toml
agents/rapid-prototyper/: agent.toml
examples/: gate-reinforcement-loop.ts  gate-signal-debounce.py
scripts/: dev-up.sh  engine-up.sh
src/: a2a-cards.ts  a2a.ts  agent-core.ts  api.ts  approval-tiers.ts  approval.ts  browser.ts  context-cache.ts  context-monitor.ts  coordination.ts  cost-tracker.ts  cron.ts  dashboard.ts  eval.ts  evolve.ts  feedback.ts  hand-runner.ts  hashline.ts  hooks.ts  index.ts  llm-router.ts  lsp-tools.ts  mcp-client.ts  memory-nudge.ts  memory-reflection.ts  memory.ts  migration.ts  orchestrator.ts  rate-limiter.ts  recovery.ts  security-map.ts  security.ts  session-lifecycle.ts  skills.ts  streaming.ts  swarm.ts  task-decomposer.ts  telemetry.ts  tools-extended.ts  tools.ts  (+3 more)
website/: App.tsx  index.html  package-lock.json  package.json  styles.css  tsconfig.tsbuildinfo
workers/channel-matrix/: Cargo.toml  iii.worker.yaml
workers/channel-matrix/src/: main.rs
workers/channel-slack/: Cargo.toml  iii.worker.yaml
workers/channel-slack/src/: main.rs
workers/loop-guard/: Cargo.toml  iii.worker.yaml
workers/loop-guard/src/: main.rs
workers/telemetry/: Cargo.toml  iii.worker.yaml
workers/telemetry/src/: main.rs
workers/vault/: Cargo.toml  iii.worker.yaml
workers/vault/src/: main.rs
workflows/: feature-build.yaml  incident-response.yaml  mvp-sprint.yaml
(+227 files in other folders)
