[package]
name = "agentos-channel-slack"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agentos-channel-slack"
path = "src/main.rs"

[dependencies]
iii-sdk.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
sha2.workspace = true
hmac.workspace = true
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
