[package]
name = "agentos-loop-guard"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agentos-loop-guard"
path = "src/main.rs"

[dependencies]
iii-sdk.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
