[package]
name = "agentos-vault"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agentos-vault"
path = "src/main.rs"

[dependencies]
iii-sdk.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
aes-gcm = "0.10"
scrypt = "0.11"
rand = "0.8"
base64 = "0.22"
